tests/ui/regions/regions-lifetime-of-struct-or-enum-variant.stderr
error[E0515]: cannot return value referencing temporary value
  --> $DIR/regions-lifetime-of-struct-or-enum-variant.rs:17:5
   |
LL |     let test_value = &id(Test);
   |                       -------- temporary value created here
LL |     test_value
   |     ^^^^^^^^^^ returns a value referencing data owned by the current function

error[E0515]: cannot return value referencing temporary value
  --> $DIR/regions-lifetime-of-struct-or-enum-variant.rs:23:5
   |
LL |     let test_value = &id(MyEnum::Variant1);
   |                       -------------------- temporary value created here
LL |     test_value
   |     ^^^^^^^^^^ returns a value referencing data owned by the current function

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0515`.
